k3s/postgresql.yml
# Namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql

# Storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
        name: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:16
          imagePullPolicy: Always
          ports:
            - name: postgresql
              containerPort: 5432
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: postgresql
spec:
  selector:
    app: postgresql
  type: LoadBalancer
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
