k3s/pgadmin.yml
# Namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql

# Secret com certificados SSLs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
        name: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          imagePullPolicy: Always
          ports:
            - name: pgadmin
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: postgresql
spec:
  selector:
    app: pgadmin
  type: LoadBalancer
  ports:
    - name: pgadmin
      port: 80
      targetPort: 80

# Proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: postgresql
spec:
  tls:
    - secretName: certificado-ssl
  rules:
    - host: pgadmin.apcode.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pgadmin
                port:
                  name: pgadmin
